apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'idea'

// Java Version Compatibility
sourceCompatibility = 1.8
targetCompatibility = 1.8

// UTF-8 should be standard by now. So use it!
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

version = '1.0'

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile project(':Servizio')

    compile (group: 'org.apache.kafka', name: 'kafka_2.10', version: '0.9.0.1') {
        exclude module: 'slf4j-simple'
        exclude module: 'slf4j-log4j12'
        exclude module: 'jmxtools'
        exclude module: 'jmxri'
        exclude module: 'jms'
    }

    compile('org.apache.zookeeper:zookeeper:3.4.8') {
        exclude module: 'slf4j-log4j12'
        exclude module: 'log4j'
    }

    compile group: 'org.rocksdb', name: 'rocksdbjni', version: '4.1.0'
    compile group: 'org.msgpack', name: 'jackson-dataformat-msgpack', version: '0.8.3'

    compile group: 'junit', name: 'junit', version: '4.11'

    testCompile group: 'junit', name: 'junit', version: '4.11'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '1.+'
    testCompile group: 'com.h2database', name: 'h2', version: '1.4.185'
    testCompile (group: 'org.apache.kafka', name: 'kafka_2.10', version: '0.9.0.1', classifier: 'test') {
        exclude module: 'slf4j-simple'
        exclude module: 'slf4j-log4j12'
        exclude module: 'jmxtools'
        exclude module: 'jmxri'
        exclude module: 'jms'
    }
}

// main class of the application
mainClassName = 'org.sectorzero.app.server.FeedsService'
applicationDefaultJvmArgs = [
        "-Dlogback.configurationFile=./config/feeds-logback.xml",
        "-Duser.timezone=Etc/UTC",
        "-XX:+UseG1GC",
        "-verbose:gc",
        "-XX:+PrintGCDetails", "-XX:+PrintGCDateStamps", "-XX:+PrintGCTimeStamps",
        "-Xloggc:var/output/logs/gc.log",
        "-XX:+UseGCLogFileRotation", "-XX:NumberOfGCLogFiles=10", "-XX:GCLogFileSize=256K",
]

run {
    args 'server', './config/feeds.yml'
}
